--- a/package.json
+++ b/package.json
@@ -47,32 +47,32 @@
     "epub"
   ],
   "dependencies": {
-    "mime": "2.2.0",
-    "pdf-text-extract": "1.3.1",
-    "xpath": "0.0.23",
-    "xmldom": "0.1.27",
-    "j": "0.4.3",
     "cheerio": "1.0.0-rc.2",
-    "marked": "0.6.2",
-    "meow": "3.7.0",
+    "epub2": "1.3.4",
     "got": "5.7.1",
     "html-entities": "1.2.0",
     "iconv-lite": "0.4.15",
+    "j": "0.4.3",
     "jschardet": "1.4.1",
-    "yauzl": "2.7.0",
-    "epub2": "1.3.4"
+    "marked": "0.6.2",
+    "meow": "3.7.0",
+    "mime": "2.2.0",
+    "pdf.js-extract": "^0.2.1",
+    "xmldom": "0.1.27",
+    "xpath": "0.0.23",
+    "yauzl": "2.7.0"
   },
   "devDependencies": {
     "chai": "1.5.0",
     "eslint": "2.11.1",
     "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-import": "^1.7.0 ",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "mocha": "1.9.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha",
+    "test": "node ./test/index.js",
     "lint": "node_modules/.bin/eslint -c .eslintrc.json lib"
   },
   "license": "MIT",
